--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 
     <body>
         <h1>Odin Recipes</h1>
+
+        <ul>
+            <li><a href="./recipes/guac.html">Guacamole</a></li>
+            <li><a href="./recipes/lemon-pepper-wings.html">Lemon-Pepper Wings</a></li>
+            <li><a href="./recipes/baked-french-fries.html">Baked French Fries</a></li>
+        </ul>
+        
+        
     </body>
 
 </html>
