Upgraded website style with block and inline knowledge

--- a/recipes/guac.html
+++ b/recipes/guac.html
@@ -5,6 +5,7 @@
   <head>
     <meta charset="utf-8">
     <title>guacamole recipe</title>
+    <link rel="stylesheet" href="../style.css">
   </head>
 
   <body>
@@ -13,15 +14,15 @@
     <img src="https://www.allrecipes.com/thmb/cKFHrBFFmZ2ItMQ32NItV4JsPHU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/14231_guacamole_Rita-1x1-1-6797bd34d19b4f88a210f2086ca1156f.jpg"
     alt="Image of green guacamole dip with two red diced tomatoes on top">
 
-    <h2>Description</h2>
+    <h2 class="recipe-sub">Description</h2>
     <p> 
         Guacamole is an avocado-based dip or spread that originated in Mexico. 
         It's typically made with mashed avocado and lime juice, then seasoned 
         with salt and cilantro. Guacamole often contains tomatoes and onions.
     </p>
 
-    <h2>Ingredients</h2>
-    <ul>
+    <h2 class="recipe-sub">Ingredients</h2>
+    <ul class="bullet-points">
         <li>3 avocados</li>
         <li>1 lime, juiced</li>
         <li>1 teaspoon salt</li>
@@ -33,8 +34,8 @@
 
     </ul>
 
-    <h2>Steps</h2>
-    <ol>
+    <h2 class="recipe-sub">Steps</h2>
+    <ol class="bullet-points">
         <li> Mash avocados, lime juice, and salt together in a medium bowl; mix in tomatoes, onion, cilantro, and garlic. Stir in cayenne pepper. </li>
         <li> Serve immediately, or cover and refrigerate for 1 hour for improved flavor.</li>
     </ol>
