--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <div class="title">
+            <h1> Odin Recipes</h1>
+        </div>
 
-        <ul>
-            <li><a href="./recipes/guac.html">Guacamole</a></li>
-            <li><a href="./recipes/lemon-pepper-wings.html">Lemon-Pepper Wings</a></li>
-            <li><a href="./recipes/baked-french-fries.html">Baked French Fries</a></li>
+        <ul class="recipe-list">
+            <li><a class = "bullet-points" href="./recipes/guac.html">Guacamole</a></li>
+            <li><a class ="bullet-points" href="./recipes/lemon-pepper-wings.html">Lemon-Pepper Wings</a></li>
+            <li><a class = "bullet-points" href="./recipes/baked-french-fries.html">Baked French Fries</a></li>
         </ul>
         
         
